# hybridvectordb

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  Dockerfile  README.md  STATUS.md  docker-compose.yml  example.py  example_benchmark.py  example_cpp.py  example_gpu.py  example_routing.py  nginx.conf  performance_data.json  prometheus.yml  requirements-benchmark.txt  requirements-cpp.txt  requirements-dev.txt  requirements-gpu.txt  requirements-production.txt  requirements.txt  setup.py  simple_server.py  start_dev.py  test_basic.py  test_gpu.py  test_routing.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: benchmarking.md  production.md
docs/api/: openapi.yaml
frontend/: .env.example  README.md  index.html  next.config.mjs  package-lock.json  package.json  serve.py  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: dashboard-layout.tsx
frontend/src/components/dashboard/: alerts-panel.tsx  latency-chart.tsx  routing-card.tsx  stat-cards.tsx  throughput-chart.tsx
frontend/src/lib/: api.ts  mock-data.ts
hybridvectordb/: __init__.py  config.py  core.py  cpu_index.py  exceptions.py  gpu_index.py  gpu_utils.py  models.py  profiler.py  router.py  utils.py
hybridvectordb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
k8s/: hybridvectordb-deployment.yaml
src/cpp/: benchmark.cpp  benchmark.h  bindings.cpp  index_manager.cpp  index_manager.h  memory_manager.cpp  memory_manager.h  optimizations.h  search_engine.cpp  search_engine.h  testing.cpp  utils.cpp  vector_database.cpp  vector_database.h  visualization.cpp
src/production/: production_server.py
tests/: CMakeLists.txt  test_cpp.cpp
